# LightDFN

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
datasets/configs/production/: dataset.cfg
docs/: download_datasets.md  preprocess_data.md  preprocessing_data.md  visualize_data.ipynb
scripts/: export_onnx.py  infer_best.py  infer_best_onnx.py  infer_streaming_onnx.py
scripts/datasets/: audb_download.py  build_hdf5.sh  check_audb.py  download_datasets.sh  fsd50k_filter.py  prepare_data.py  sha256sum.py  zip_merge_progress.py
src/: augmentations.py  config.py  constants.py  dataloader.py  erb.py  io.py  lightdeepfilternet.py  modules.py  train.py  types.py  utils.py
src/configs/: config.py  default.yaml  test.yaml
src/dataloader/: __init__.py  dataset_config.py  fft.py  hdf5.py  loader.py  td.py
src/losses/: __init__.py  loss.py
src/model/: lightdeepfilternet.py  modules.py  streaming.py
src/scripts/: build_hdf5.sh  prepare_data.py
src/utils/: audio.py  dataloader.py  erb.py  io.py  utils.py
src_rust/: Cargo.toml  build.sh  server.js  test_wasm.mjs  test_wasm_audio.mjs
src_rust/.cargo/: config.toml
src_rust/benches/: benchmark.rs
src_rust/demo/: audio-processor.js  index.html  node_server.js  ringbuffer.js  script.js  worker.js
src_rust/examples/: bench_vs_dfn3.rs  benchmark.rs  infer_audio.rs  timing_breakdown.rs
src_rust/src/: dsp.rs  erb.rs  features.rs  lib.rs  ligru.rs  model.rs  model_native.rs  processor.rs  stft.rs  streaming.rs
