[project]
name = "LightDeepFilterNet"
version = "0.1.0"
description = "Lightweight audio noise suppression using Li-GRU - based on DeepFilterNet3"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
default = true

[tool.uv.sources]
torch = { index = "pytorch" }
