[project]
name = "LightDeepFilterNet"
version = "0.1.0"
description = "Lightweight audio noise suppression using Li-GRU - based on DeepFilterNet3"
requires-python = ">=3.14"
dependencies = [
    "audb>=1.11.4",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "h5py>=3.0.0",
    "numpy>=1.24.0",
    "loguru>=0.7.0",
    "soundfile>=0.12.0",
    "scipy>=1.10.0",
    "torchcodec>=0.10.0",
    "maturin>=1.12.6",
    "torch-audiomentations>=0.12.0",
    "wandb>=0.25.1",
    "matplotlib>=3.10.8",
    "onnxscript>=0.6.2",
    "onnxsim>=0.6.2",
    "onnxruntime>=1.24.4",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" },
]
torchaudio = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" },
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
]
