[package]
name = "lightdfn-wasm"
version = "0.1.0"
edition = "2021"
authors = ["LightDFN Contributors"]
description = "LightDFN noise suppression compiled to WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# FFT
realfft = "3.1"

# tract for ONNX inference
tract-core = "0.21"
tract-onnx = "0.21"
tract-hir = "0.21"
tract-pulse = "0.21"  # Need this for SimpleState

# ndarray for tensor operations (match tract version)
ndarray = "0.16"  # Changed from 0.15 to match tract
ndarray-stats = "0.6"  # Updated to match ndarray 0.16

# Utilities
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }  # Need "js" feature for WASM

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"
hound = "3.5"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
wasm-opt = [
  "-O4",
  "--enable-simd",
  "--enable-relaxed-simd",          # Relaxed SIMD for better performance
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
  "--fast-math",                     # Aggressive math optimizations
]